[package]
name = "msquic"
version = "2.5.0-beta"
edition = "2018"
authors = ["Microsoft"]
description = "Microsoft implementation of the IETF QUIC protocol"
readme = "README.md"
repository = "https://github.com/microsoft/msquic/"
license = "MIT"
categories = ["network-programming", "asynchronous"]
keywords = ["quic", "network", "secure"]
build = "scripts/build.rs"
include = [
    "*/*.md",
    "/*.toml",
    "/cmake",
    "/CMakeLists.txt",
    "/LICENSE",
    "/submodules/CMakeLists.txt",
    "/submodules/openssl/*.*",
    "/submodules/openssl/apps",
    "/submodules/openssl/CHANGES",
    "/submodules/openssl/config",
    "/submodules/openssl/Configure",
    "/submodules/openssl/Configurations",
    "/submodules/openssl/crypto",
    "/submodules/openssl/engines",
    "/submodules/openssl/external",
    "/submodules/openssl/include",
    "/submodules/openssl/ms",
    "/submodules/openssl/os-dep",
    "/submodules/openssl/ssl",
    "/submodules/openssl/util",
    "/submodules/openssl/VMS",
    "/submodules/xdp-for-windows/published/external",
    "/scripts/build.rs",
    "/src/**/*.rs",
    "/src/bin",
    "/src/core",
    "/src/inc",
    "/src/generated",
    "/src/manifest",
    "/src/platform",
    "/THIRD-PARTY-NOTICES",
]

[features]
default = []
schannel = []
static = []
preview-api = []
# Overwrite generated binding by reruning the bindgen
overwrite = [ "dep:bindgen" ]

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.71", optional = true }

[dependencies]
bitfield = "0.18.1"
libc = "0.2.0"
c-types = "4.0.0"
serde = { version = "1.0.117", features = ["derive"] }
ctor = "0.2.9"
socket2 = "0.5.8"
