[package]
name = "msquic"
version = "2.6.0-beta"
edition = "2021"
authors = ["Microsoft"]
description = "Microsoft implementation of the IETF QUIC protocol"
readme = "README.md"
repository = "https://github.com/microsoft/msquic/"
license = "MIT"
categories = ["network-programming", "asynchronous"]
keywords = ["quic", "network", "secure"]
build = "scripts/build.rs"
include = [
    "*/*.md",
    "/*.toml",
    "/cmake",
    "/CMakeLists.txt",
    "/LICENSE",
    "/submodules/CMakeLists.txt",
    "/submodules/quictls/*.*",
    "/submodules/quictls/apps",
    "/submodules/quictls/CHANGES",
    "/submodules/quictls/config",
    "/submodules/quictls/Configure",
    "/submodules/quictls/Configurations",
    "/submodules/quictls/crypto",
    "/submodules/quictls/doc",
    "/submodules/quictls/engines",
    "/submodules/quictls/exporters",
    "/submodules/quictls/external",
    "/submodules/quictls/fuzz",
    "/submodules/quictls/include",
    "/submodules/quictls/ms",
    "/submodules/quictls/os-dep",
    "/submodules/quictls/providers",
    "/submodules/quictls/ssl",
    "/submodules/quictls/tools",
    "/submodules/quictls/util",
    "/submodules/quictls/VMS",
    "/submodules/openssl/*.*",
    "/submodules/openssl/apps",
    "/submodules/openssl/CHANGES",
    "/submodules/openssl/config",
    "/submodules/openssl/Configure",
    "/submodules/openssl/Configurations",
    "/submodules/openssl/crypto",
    "/submodules/openssl/engines",
    "/submodules/openssl/external",
    "/submodules/openssl/include",
    "/submodules/openssl/ms",
    "/submodules/openssl/os-dep",
    "/submodules/openssl/ssl",
    "/submodules/openssl/tools",
    "/submodules/openssl/fuzz",
    "/submodules/openssl/doc",
    "/submodules/openssl/exporters",
    "/submodules/openssl/providers",
    "/submodules/openssl/util",
    "/submodules/openssl/VMS",
    "/submodules/xdp-for-windows/published/external",
    "/scripts/build.rs",
    "/src/**/*.rs",
    "/src/bin",
    "/src/core",
    "/src/inc",
    "/src/generated",
    "/src/manifest",
    "/src/platform",
    "/THIRD-PARTY-NOTICES",
]

[lib]
path = "src/rs/lib.rs"

[features]
default = ["src"]
# Build c code from source
src = [ "dep:cmake" ]
# Find prebuilt msquic. Use vcpkg installed location on Windows,
# while use system installed location on linux.
# MacOs is not supported.
find = []
# Windows uses schannel, and linux uses quictls by default.
# This feature enables quictls on windows, and has no effect on linux.
# This feature enables openssl on windows, and has no effect on linux.
openssl = []
quictls = []
static = []
preview-api = []
# Overwrite generated binding by reruning the bindgen
overwrite = [ "dep:bindgen" ]

[build-dependencies]
cmake = { version = "0.1", optional = true }
bindgen = { version = "0.71", optional = true }

[dependencies]
bitflags = "2.9"
libc = "0.2"
c-types = "5.0"
ctor = "0.4"
socket2 = "0.5"
